--- a/chucknorris/assets/css/style.css
+++ b/chucknorris/assets/css/style.css
@@ -1,7 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
 body{
-    background-color: aquamarine;
+    margin: 0;
+    font-family: 'Yusei Magic', sans-serif;
 }
 
 li{
     cursor: pointer;
+}
+
+nav{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: rgb(215, 174, 10);
+}
+nav li{
+    text-transform: capitalize;
+    padding: 15px;
+    color: black;
+    border-radius: 5px;
+    list-style-type: none;
+}
+nav li:hover{
+    color: antiquewhite;
+    background-color: rgb(183, 26, 26);
+}
+
+
+.flex{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 250px;
+}
+
+#root{
+    opacity: 0.7;
+    background-image: url('/chucknorris/assets/img/bck_chuck.jpg');
+
+    height: 100vh;
+
+    /* Center and scale the image nicely */
+    background-position: left;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.joke-box{
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    flex-direction: column;
+
+    padding: 25px;
+    background-color: #FFD;
+    border: 2px solid black;
+    border-radius: 5px;
+    color: #f60;
+
+    -webkit-box-shadow: 9px 10px 37px -3px rgba(0,0,0,0.75);
+-moz-box-shadow: 9px 10px 37px -3px rgba(0,0,0,0.75);
+box-shadow: 9px 10px 37px -3px rgba(0,0,0,0.75);
 }
